# pobr-image-segmentation

./: .gitignore  BoundingBox.h  CMakeLists.txt  ColourHLS.h  ColourProvider.h  Config.h  Converter.h  Histogram.cpp  Histogram.h  ImageProcessor.cpp  ImageProcessor.h  MomentumComputing.cpp  MomentumComputing.h  MomentumValues.txt  README.md  Recognition.cpp  Recognition.h  Segment.cpp  Segment.h  Segmentation.cpp  Segmentation.h  Utils.h  main.cpp
